Remove IsInVr check from render_widget_host_view_android.cc

This check was reintroduced in https://crbug.com/853686 because reader
mode seems to have relied on not receiving the first toolbar offset
update. This, however, introduces a bug with toolbar not hiding when
re-entering a Trusted Web Activity after activity re-creation (see
steps in the linked bug).

The original reader mode bug doesn't reproduce, so we hopefully can
remove the check.

TBR: mdjones@chromium.org, kenrb@chromium.org
Bug: 908037
Change-Id: I398e68b242b597e8e1af9acc627cc18c91c6ac4c
Reviewed-on: https://chromium-review.googlesource.com/c/1363286
Reviewed-by: Matthew Jones <mdjones@chromium.org>
Reviewed-by: Ken Buchanan <kenrb@chromium.org>
Commit-Queue: Pavel Shmakov <pshmakov@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#614076}(cherry picked from commit 701485a7476a6765ee77f631c3ea47550a41fb32 [formerly c90e8c1c990f9284d77cda0816bb10a30f5be5ab])
Reviewed-on: https://chromium-review.googlesource.com/c/1374984
Reviewed-by: Pavel Shmakov <pshmakov@chromium.org>
Cr-Commit-Position: refs/branch-heads/3626@{#321}
Cr-Branched-From: 5302c6863bade38a5d283a7cce26a309d8e8e755 [formerly d897fb137fbaaa9355c0c93124cc048824eb1e65]-refs/heads/master@{#612437}
Former-commit-id: 5432d5f309441f6af83703fe74a845e8f1c77b02