content/browser/renderer_host/render_widget_host_view_android.cc
@@ -1330,9 +1330,7 @@ bool RenderWidgetHostViewAndroid::UpdateControls(
   float top_translate = top_shown_pix - top_controls_pix;
   bool top_changed =
       !cc::MathUtil::IsFloatNearlyTheSame(top_shown_pix, prev_top_shown_pix_);
-  // TODO(mthiesse, https://crbug.com/853686): Remove the IsInVR check once
-  // there are no use cases for ignoring the initial update.
-  if (top_changed || (!controls_initialized_ && IsInVR()))
+  if (top_changed || !controls_initialized_)
     view_.OnTopControlsChanged(top_translate, top_shown_pix);
   prev_top_shown_pix_ = top_shown_pix;
   prev_top_controls_translate_ = top_translate;
@@ -1342,7 +1340,7 @@ bool RenderWidgetHostViewAndroid::UpdateControls(
   bool bottom_changed = !cc::MathUtil::IsFloatNearlyTheSame(
       bottom_shown_pix, prev_bottom_shown_pix_);
   float bottom_translate = bottom_controls_pix - bottom_shown_pix;
-  if (bottom_changed || (!controls_initialized_ && IsInVR()))
+  if (bottom_changed || !controls_initialized_)
     view_.OnBottomControlsChanged(bottom_translate, bottom_shown_pix);
   prev_bottom_shown_pix_ = bottom_shown_pix;
   prev_bottom_controls_translate_ = bottom_translate;
@@ -1896,17 +1894,6 @@ void RenderWidgetHostViewAndroid::SetIsInVR(bool is_in_vr) {
   gesture_provider_.UpdateConfig(ui::GetGestureProviderConfig(
       is_in_vr_ ? ui::GestureProviderConfigType::CURRENT_PLATFORM_VR
                 : ui::GestureProviderConfigType::CURRENT_PLATFORM));
-
-  if (is_in_vr_ && controls_initialized_) {
-    // TODO(mthiesse, https://crbug.com/825765): See the TODO in
-    // RenderWidgetHostViewAndroid::OnFrameMetadataUpdated. RWHVA isn't
-    // initialized with VR state so the initial frame metadata top controls
-    // height can be dropped when a new RWHVA is created.
-    view_.OnTopControlsChanged(prev_top_controls_translate_,
-                               prev_top_shown_pix_);
-    view_.OnBottomControlsChanged(prev_bottom_controls_translate_,
-                                  prev_bottom_shown_pix_);
-  }
 }
 
 bool RenderWidgetHostViewAndroid::IsInVR() const {
